fix: reactive grid columns to fix text overlap on mobile

--- a/src/components/resume.module.css
+++ b/src/components/resume.module.css
@@ -183,3 +183,7 @@ p {
 h6 {
     font-size: 19px
 }
+
+.column {
+    text-align: center;
+}
